<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventName"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@color/white"
                        android:hint="@string/Titulo"
                        android:inputType="textEmailAddress"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventDescEdt"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@color/white"
                        android:hint="@string/descEvent"
                        android:inputType="textMultiLine"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/mascotasSpn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/eventTimeTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/timeText"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="22sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/eventDateTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/fechaText"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/saveEventtBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/purple_200"
                    android:text="@string/btnguardar"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>