<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">


    <!-- Contenedor para la imagen del usuario y el ícono de la cámara -->
    <FrameLayout
        android:id="@+id/frameIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Imagen circular del usuario -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/user_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/user_image"
            android:src="@drawable/ic_person"
            app:shapeAppearanceOverlay="@style/CircularImage" />

        <!-- Ícono de la cámara sobre la imagen -->
        <ImageView
            android:id="@+id/camera_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="-16dp"
            android:background="@android:color/white"
            android:contentDescription="@string/imgPhoto"
            android:padding="8dp"
            android:src="@drawable/ic_camera" />

    </FrameLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameIcon">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!-- Nombre -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nombre"
                style="@style/CustomTextInputLayout"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:startIconDrawable="@drawable/ic_name"
                android:hint="@string/etnombre"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>



            <!-- Apellido -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_apellido"
                style="@style/CustomTextInputLayout"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_nombre"

                app:startIconDrawable="@drawable/ic_name"
                android:hint="@string/etApellido"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_apellido"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Correo -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_correo"
                style="@style/CustomTextInputLayout"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_apellido"

                app:startIconDrawable="@drawable/ic_email"
                android:hint="@string/etcorreo"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Teléfono -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_telefono"
                style="@style/CustomTextInputLayout"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_correo"

                app:startIconDrawable="@drawable/ic_phone"
                android:hint="@string/ettelefono"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Localización -->
            <TextView
                android:id="@+id/tv_localizacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/spiLocalizacion"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_telefono" />


            <Spinner
                android:id="@+id/spinner_localizacion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_localizacion" />

            <!--
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/spinner_localizacion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_localizacion" />
-->

            <!-- Botón Guardar -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_guardar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:cornerRadius="16dp"

                android:text="@string/btnguardar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_localizacion" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


    <!-- Imagen circular del usuario -->
    <!--<com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_person"
        android:contentDescription="@string/user_image"
        app:shapeAppearanceOverlay="@style/CircularImage"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />-->

    <!--<TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>