<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EEEEEE"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="32dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Imagen centrada arriba -->

            <!-- Imagen circular del usuario -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/type_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/imgPetDes"
                android:src="@drawable/ic_home"
                app:shapeAppearanceOverlay="@style/CircularImage"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvAlarmType"
                />

            <TextView
                android:id="@+id/tvAlarmType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"
                android:textStyle="bold"
                android:letterSpacing="0.05"
                android:textColor="@color/primaryTextColor"
                android:gravity="center"
                android:elevation="2dp"
                android:text="@string/textDefault"
                android:textSize="18sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/type_image"
                />


            <!-- Nombre con imagen a la izquierda centrada abajo -->
            <TextView
                android:id="@+id/tvHoratio"
                style="@style/CustomTextView"
                android:text="Horario"
                android:textSize="18sp"

                app:layout_constraintEnd_toStartOf="@id/pet_image"
                app:layout_constraintStart_toEndOf="@id/type_image"

            <TextView
                android:id="@+id/tvActName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="nombre de alarma"
                android:textSize="14sp"

                app:layout_constraintEnd_toStartOf="@id/pet_image"
                app:layout_constraintStart_toEndOf="@id/type_image"
                app:layout_constraintTop_toBottomOf="@id/tvHoratio"
                />


            <FrameLayout
                android:id="@+id/frameDatos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                app:layout_constraintEnd_toStartOf="@id/pet_image"
                app:layout_constraintStart_toEndOf="@id/type_image"
                app:layout_constraintTop_toBottomOf="@id/tvActName"
                >

            </FrameLayout>

            <!-- Label descripcion -->
            <TextView
                android:id="@+id/tvRepeticion"
                style="@style/CustomTextView"

                android:text="se repite cada x tiempo o no"
                android:visibility="gone"
                android:textSize="14sp"

                app:layout_constraintEnd_toStartOf="@id/pet_image"
                app:layout_constraintStart_toEndOf="@id/type_image"
                app:layout_constraintTop_toBottomOf="@id/frameDatos"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <!-- Imagen circular del usuario -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/pet_image"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:contentDescription="@string/imgPetDes"
                android:src="@drawable/ic_pets"
                app:shapeAppearanceOverlay="@style/CircularImage"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvpetname"
                />

            <TextView
                android:id="@+id/tvpetname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="8dp"
                android:textStyle="bold"
                android:letterSpacing="0.05"
                android:textColor="@color/primaryTextColor"
                android:gravity="center"
                android:elevation="2dp"
                android:text="@string/namePet"
                android:textSize="18sp"

                app:layout_constraintStart_toStartOf="@id/pet_image"
                app:layout_constraintTop_toBottomOf="@id/pet_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
